feat(evals): experiment B driver, first live scoring, and recordings
DedupeExperiment reads the journals, blocks pairs, writes the blind labeling sheet,
scores the selected pairs in two arms through the recording client, clusters the named
workflow under the pre-registered rule and a post-hoc same-defect rule, and computes
the bars when a labels file exists. Recordings remember their model so a replay-only
client resolves null-model requests to the same bodies. 540 exchanges recorded
($0.023); the report and sheets live under typesafe-evals/experiments/dedupe.